change swagger documentation
